src/easy_ast/y.output
Terminals unused in grammar

    ARROW
    RESERVED


Grammar

    0 $accept: Program $end

    1 Program: CLASS ID LBRACE MethodFieldSemicolonRep RBRACE

    2 MethodFieldSemicolonRep: MethodDecl MethodFieldSemicolonRep
    3                        | FieldDecl MethodFieldSemicolonRep
    4                        | SEMICOLON MethodFieldSemicolonRep
    5                        | ε

    6 MethodDecl: PUBLIC STATIC MethodHeader MethodBody

    7 FieldDecl: PUBLIC STATIC Type ID CommaIdRep SEMICOLON
    8          | error SEMICOLON

    9 CommaIdRep: COMMA ID CommaIdRep
   10           | ε

   11 Type: BOOL
   12     | INT
   13     | DOUBLE

   14 MethodHeader: Type ID LPAR FormalParams RPAR
   15             | VOID ID LPAR FormalParams RPAR
   16             | Type ID LPAR RPAR
   17             | VOID ID LPAR RPAR

   18 FormalParams: Type ID CommaTypeIdRep
   19             | STRING LSQ RSQ ID

   20 CommaTypeIdRep: COMMA Type ID CommaTypeIdRep
   21               | ε

   22 MethodBody: LBRACE StatementVarRep RBRACE

   23 StatementVarRep: Statement StatementVarRep
   24                | VarDecl StatementVarRep
   25                | ε

   26 VarDecl: Type ID CommaIdRep SEMICOLON

   27 Statement: LBRACE StatementRep RBRACE
   28          | IF LPAR Expr RPAR Statement ELSE Statement
   29          | IF LPAR Expr RPAR Statement
   30          | WHILE LPAR Expr RPAR Statement
   31          | RETURN Expr SEMICOLON
   32          | RETURN SEMICOLON
   33          | PRINT LPAR Expr RPAR SEMICOLON
   34          | PRINT LPAR STRLIT RPAR SEMICOLON
   35          | MethodInvocation SEMICOLON
   36          | Assignment SEMICOLON
   37          | ParseArgs SEMICOLON
   38          | SEMICOLON
   39          | error SEMICOLON

   40 StatementRep: Statement StatementRep
   41             | ε

   42 MethodInvocation: ID LPAR RPAR
   43                 | ID LPAR Expr CommaExprRep RPAR
   44                 | ID LPAR error RPAR

   45 CommaExprRep: COMMA Expr CommaExprRep
   46             | ε

   47 Assignment: ID ASSIGN Expr

   48 ParseArgs: PARSEINT LPAR ID LSQ Expr RSQ RPAR
   49          | PARSEINT LPAR error RPAR

   50 Expr: ExprOp
   51     | Assignment

   52 ExprOp: LPAR Expr RPAR
   53       | MethodInvocation
   54       | ParseArgs
   55       | ID
   56       | ID DOTLENGTH
   57       | INTLIT
   58       | REALLIT
   59       | BOOLLIT
   60       | MINUS ExprOp
   61       | NOT ExprOp
   62       | PLUS ExprOp
   63       | ExprOp PLUS ExprOp
   64       | ExprOp MINUS ExprOp
   65       | ExprOp STAR ExprOp
   66       | ExprOp DIV ExprOp
   67       | ExprOp MOD ExprOp
   68       | ExprOp AND ExprOp
   69       | ExprOp OR ExprOp
   70       | ExprOp XOR ExprOp
   71       | ExprOp LSHIFT ExprOp
   72       | ExprOp RSHIFT ExprOp
   73       | ExprOp EQ ExprOp
   74       | ExprOp GE ExprOp
   75       | ExprOp GT ExprOp
   76       | ExprOp LE ExprOp
   77       | ExprOp LT ExprOp
   78       | ExprOp NE ExprOp
   79       | LPAR error RPAR


Terminals, with rules where they appear

    $end (0) 0
    error (256) 8 39 44 49 79
    ID <id> (258) 1 7 9 14 15 16 17 18 19 20 26 42 43 44 47 48 55 56
    INTLIT <id> (259) 57
    REALLIT <id> (260) 58
    BOOLLIT <id> (261) 59
    STRLIT <id> (262) 34
    AND (263) 68
    ASSIGN (264) 47
    BOOL (265) 11
    STAR (266) 65
    COMMA (267) 9 20 45
    DIV (268) 66
    EQ (269) 73
    GE (270) 74
    GT (271) 75
    LBRACE (272) 1 22 27
    LE (273) 76
    LPAR (274) 14 15 16 17 28 29 30 33 34 42 43 44 48 49 52 79
    LSQ (275) 19 48
    LT (276) 77
    MINUS (277) 60 64
    MOD (278) 67
    NE (279) 78
    NOT (280) 61
    OR (281) 69
    PLUS (282) 62 63
    RBRACE (283) 1 22 27
    RPAR (284) 14 15 16 17 28 29 30 33 34 42 43 44 48 49 52 79
    RSQ (285) 19 48
    SEMICOLON (286) 4 7 8 26 31 32 33 34 35 36 37 38 39
    ARROW (287)
    LSHIFT (288) 71
    RSHIFT (289) 72
    XOR (290) 70
    CLASS (291) 1
    DOTLENGTH (292) 56
    DOUBLE (293) 13
    ELSE (294) 28
    IF (295) 28 29
    INT (296) 12
    PRINT (297) 33 34
    PARSEINT (298) 48 49
    PUBLIC (299) 6 7
    RETURN (300) 31 32
    STATIC (301) 6 7
    STRING (302) 19
    VOID (303) 15 17
    WHILE (304) 30
    RESERVED (305)


Nonterminals, with rules where they appear

    $accept (51)
        on left: 0
    Program <node> (52)
        on left: 1
        on right: 0
    MethodFieldSemicolonRep <node> (53)
        on left: 2 3 4 5
        on right: 1 2 3 4
    MethodDecl <node> (54)
        on left: 6
        on right: 2
    FieldDecl <node> (55)
        on left: 7 8
        on right: 3
    CommaIdRep <node> (56)
        on left: 9 10
        on right: 7 9 26
    Type <node> (57)
        on left: 11 12 13
        on right: 7 14 16 18 20 26
    MethodHeader <node> (58)
        on left: 14 15 16 17
        on right: 6
    FormalParams <node> (59)
        on left: 18 19
        on right: 14 15
    CommaTypeIdRep <node> (60)
        on left: 20 21
        on right: 18 20
    MethodBody <node> (61)
        on left: 22
        on right: 6
    StatementVarRep <node> (62)
        on left: 23 24 25
        on right: 22 23 24
    VarDecl <node> (63)
        on left: 26
        on right: 24
    Statement <node> (64)
        on left: 27 28 29 30 31 32 33 34 35 36 37 38 39
        on right: 23 28 29 30 40
    StatementRep <node> (65)
        on left: 40 41
        on right: 27 40
    MethodInvocation <node> (66)
        on left: 42 43 44
        on right: 35 53
    CommaExprRep <node> (67)
        on left: 45 46
        on right: 43 45
    Assignment <node> (68)
        on left: 47
        on right: 36 51
    ParseArgs <node> (69)
        on left: 48 49
        on right: 37 54
    Expr <node> (70)
        on left: 50 51
        on right: 28 29 30 31 33 43 45 47 48 52
    ExprOp <node> (71)
        on left: 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79
        on right: 50 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78


State 0

    0 $accept: • Program $end

    CLASS  shift, and go to state 1

    Program  go to state 2


State 1

    1 Program: CLASS • ID LBRACE MethodFieldSemicolonRep RBRACE

    ID  shift, and go to state 3


State 2

    0 $accept: Program • $end

    $end  shift, and go to state 4


State 3

    1 Program: CLASS ID • LBRACE MethodFieldSemicolonRep RBRACE

    LBRACE  shift, and go to state 5


State 4

    0 $accept: Program $end •

    $default  accept


State 5

    1 Program: CLASS ID LBRACE • MethodFieldSemicolonRep RBRACE

    error      shift, and go to state 6
    SEMICOLON  shift, and go to state 7
    PUBLIC     shift, and go to state 8

    RBRACE  reduce using rule 5 (MethodFieldSemicolonRep)

    MethodFieldSemicolonRep  go to state 9
    MethodDecl               go to state 10
    FieldDecl                go to state 11


State 6

    8 FieldDecl: error • SEMICOLON

    SEMICOLON  shift, and go to state 12


State 7

    4 MethodFieldSemicolonRep: SEMICOLON • MethodFieldSemicolonRep

    error      shift, and go to state 6
    SEMICOLON  shift, and go to state 7
    PUBLIC     shift, and go to state 8

    RBRACE  reduce using rule 5 (MethodFieldSemicolonRep)

    MethodFieldSemicolonRep  go to state 13
    MethodDecl               go to state 10
    FieldDecl                go to state 11


State 8

    6 MethodDecl: PUBLIC • STATIC MethodHeader MethodBody
    7 FieldDecl: PUBLIC • STATIC Type ID CommaIdRep SEMICOLON

    STATIC  shift, and go to state 14


State 9

    1 Program: CLASS ID LBRACE MethodFieldSemicolonRep • RBRACE

    RBRACE  shift, and go to state 15


State 10

    2 MethodFieldSemicolonRep: MethodDecl • MethodFieldSemicolonRep

    error      shift, and go to state 6
    SEMICOLON  shift, and go to state 7
    PUBLIC     shift, and go to state 8

    RBRACE  reduce using rule 5 (MethodFieldSemicolonRep)

    MethodFieldSemicolonRep  go to state 16
    MethodDecl               go to state 10
    FieldDecl                go to state 11


State 11

    3 MethodFieldSemicolonRep: FieldDecl • MethodFieldSemicolonRep

    error      shift, and go to state 6
    SEMICOLON  shift, and go to state 7
    PUBLIC     shift, and go to state 8

    RBRACE  reduce using rule 5 (MethodFieldSemicolonRep)

    MethodFieldSemicolonRep  go to state 17
    MethodDecl               go to state 10
    FieldDecl                go to state 11


State 12

    8 FieldDecl: error SEMICOLON •

    $default  reduce using rule 8 (FieldDecl)


State 13

    4 MethodFieldSemicolonRep: SEMICOLON MethodFieldSemicolonRep •

    $default  reduce using rule 4 (MethodFieldSemicolonRep)


State 14

    6 MethodDecl: PUBLIC STATIC • MethodHeader MethodBody
    7 FieldDecl: PUBLIC STATIC • Type ID CommaIdRep SEMICOLON

    BOOL    shift, and go to state 18
    DOUBLE  shift, and go to state 19
    INT     shift, and go to state 20
    VOID    shift, and go to state 21

    Type          go to state 22
    MethodHeader  go to state 23


State 15

    1 Program: CLASS ID LBRACE MethodFieldSemicolonRep RBRACE •

    $default  reduce using rule 1 (Program)


State 16

    2 MethodFieldSemicolonRep: MethodDecl MethodFieldSemicolonRep •

    $default  reduce using rule 2 (MethodFieldSemicolonRep)


State 17

    3 MethodFieldSemicolonRep: FieldDecl MethodFieldSemicolonRep •

    $default  reduce using rule 3 (MethodFieldSemicolonRep)


State 18

   11 Type: BOOL •

    $default  reduce using rule 11 (Type)


State 19

   13 Type: DOUBLE •

    $default  reduce using rule 13 (Type)


State 20

   12 Type: INT •

    $default  reduce using rule 12 (Type)


State 21

   15 MethodHeader: VOID • ID LPAR FormalParams RPAR
   17             | VOID • ID LPAR RPAR

    ID  shift, and go to state 24


State 22

    7 FieldDecl: PUBLIC STATIC Type • ID CommaIdRep SEMICOLON
   14 MethodHeader: Type • ID LPAR FormalParams RPAR
   16             | Type • ID LPAR RPAR

    ID  shift, and go to state 25


State 23

    6 MethodDecl: PUBLIC STATIC MethodHeader • MethodBody

    LBRACE  shift, and go to state 26

    MethodBody  go to state 27


State 24

   15 MethodHeader: VOID ID • LPAR FormalParams RPAR
   17             | VOID ID • LPAR RPAR

    LPAR  shift, and go to state 28


State 25

    7 FieldDecl: PUBLIC STATIC Type ID • CommaIdRep SEMICOLON
   14 MethodHeader: Type ID • LPAR FormalParams RPAR
   16             | Type ID • LPAR RPAR

    COMMA  shift, and go to state 29
    LPAR   shift, and go to state 30

    $default  reduce using rule 10 (CommaIdRep)

    CommaIdRep  go to state 31


State 26

   22 MethodBody: LBRACE • StatementVarRep RBRACE

    error      shift, and go to state 32
    ID         shift, and go to state 33
    BOOL       shift, and go to state 18
    LBRACE     shift, and go to state 34
    SEMICOLON  shift, and go to state 35
    DOUBLE     shift, and go to state 19
    IF         shift, and go to state 36
    INT        shift, and go to state 20
    PRINT      shift, and go to state 37
    PARSEINT   shift, and go to state 38
    RETURN     shift, and go to state 39
    WHILE      shift, and go to state 40

    RBRACE  reduce using rule 25 (StatementVarRep)

    Type              go to state 41
    StatementVarRep   go to state 42
    VarDecl           go to state 43
    Statement         go to state 44
    MethodInvocation  go to state 45
    Assignment        go to state 46
    ParseArgs         go to state 47


State 27

    6 MethodDecl: PUBLIC STATIC MethodHeader MethodBody •

    $default  reduce using rule 6 (MethodDecl)


State 28

   15 MethodHeader: VOID ID LPAR • FormalParams RPAR
   17             | VOID ID LPAR • RPAR

    BOOL    shift, and go to state 18
    RPAR    shift, and go to state 48
    DOUBLE  shift, and go to state 19
    INT     shift, and go to state 20
    STRING  shift, and go to state 49

    Type          go to state 50
    FormalParams  go to state 51


State 29

    9 CommaIdRep: COMMA • ID CommaIdRep

    ID  shift, and go to state 52


State 30

   14 MethodHeader: Type ID LPAR • FormalParams RPAR
   16             | Type ID LPAR • RPAR

    BOOL    shift, and go to state 18
    RPAR    shift, and go to state 53
    DOUBLE  shift, and go to state 19
    INT     shift, and go to state 20
    STRING  shift, and go to state 49

    Type          go to state 50
    FormalParams  go to state 54


State 31

    7 FieldDecl: PUBLIC STATIC Type ID CommaIdRep • SEMICOLON

    SEMICOLON  shift, and go to state 55


State 32

   39 Statement: error • SEMICOLON

    SEMICOLON  shift, and go to state 56


State 33

   42 MethodInvocation: ID • LPAR RPAR
   43                 | ID • LPAR Expr CommaExprRep RPAR
   44                 | ID • LPAR error RPAR
   47 Assignment: ID • ASSIGN Expr

    ASSIGN  shift, and go to state 57
    LPAR    shift, and go to state 58


State 34

   27 Statement: LBRACE • StatementRep RBRACE

    error      shift, and go to state 32
    ID         shift, and go to state 33
    LBRACE     shift, and go to state 34
    SEMICOLON  shift, and go to state 35
    IF         shift, and go to state 36
    PRINT      shift, and go to state 37
    PARSEINT   shift, and go to state 38
    RETURN     shift, and go to state 39
    WHILE      shift, and go to state 40

    RBRACE  reduce using rule 41 (StatementRep)

    Statement         go to state 59
    StatementRep      go to state 60
    MethodInvocation  go to state 45
    Assignment        go to state 46
    ParseArgs         go to state 47


State 35

   38 Statement: SEMICOLON •

    $default  reduce using rule 38 (Statement)


State 36

   28 Statement: IF • LPAR Expr RPAR Statement ELSE Statement
   29          | IF • LPAR Expr RPAR Statement

    LPAR  shift, and go to state 61


State 37

   33 Statement: PRINT • LPAR Expr RPAR SEMICOLON
   34          | PRINT • LPAR STRLIT RPAR SEMICOLON

    LPAR  shift, and go to state 62


State 38

   48 ParseArgs: PARSEINT • LPAR ID LSQ Expr RSQ RPAR
   49          | PARSEINT • LPAR error RPAR

    LPAR  shift, and go to state 63


State 39

   31 Statement: RETURN • Expr SEMICOLON
   32          | RETURN • SEMICOLON

    ID         shift, and go to state 64
    INTLIT     shift, and go to state 65
    REALLIT    shift, and go to state 66
    BOOLLIT    shift, and go to state 67
    LPAR       shift, and go to state 68
    MINUS      shift, and go to state 69
    NOT        shift, and go to state 70
    PLUS       shift, and go to state 71
    SEMICOLON  shift, and go to state 72
    PARSEINT   shift, and go to state 38

    MethodInvocation  go to state 73
    Assignment        go to state 74
    ParseArgs         go to state 75
    Expr              go to state 76
    ExprOp            go to state 77


State 40

   30 Statement: WHILE • LPAR Expr RPAR Statement

    LPAR  shift, and go to state 78


State 41

   26 VarDecl: Type • ID CommaIdRep SEMICOLON

    ID  shift, and go to state 79


State 42

   22 MethodBody: LBRACE StatementVarRep • RBRACE

    RBRACE  shift, and go to state 80


State 43

   24 StatementVarRep: VarDecl • StatementVarRep

    error      shift, and go to state 32
    ID         shift, and go to state 33
    BOOL       shift, and go to state 18
    LBRACE     shift, and go to state 34
    SEMICOLON  shift, and go to state 35
    DOUBLE     shift, and go to state 19
    IF         shift, and go to state 36
    INT        shift, and go to state 20
    PRINT      shift, and go to state 37
    PARSEINT   shift, and go to state 38
    RETURN     shift, and go to state 39
    WHILE      shift, and go to state 40

    RBRACE  reduce using rule 25 (StatementVarRep)

    Type              go to state 41
    StatementVarRep   go to state 81
    VarDecl           go to state 43
    Statement         go to state 44
    MethodInvocation  go to state 45
    Assignment        go to state 46
    ParseArgs         go to state 47


State 44

   23 StatementVarRep: Statement • StatementVarRep

    error      shift, and go to state 32
    ID         shift, and go to state 33
    BOOL       shift, and go to state 18
    LBRACE     shift, and go to state 34
    SEMICOLON  shift, and go to state 35
    DOUBLE     shift, and go to state 19
    IF         shift, and go to state 36
    INT        shift, and go to state 20
    PRINT      shift, and go to state 37
    PARSEINT   shift, and go to state 38
    RETURN     shift, and go to state 39
    WHILE      shift, and go to state 40

    RBRACE  reduce using rule 25 (StatementVarRep)

    Type              go to state 41
    StatementVarRep   go to state 82
    VarDecl           go to state 43
    Statement         go to state 44
    MethodInvocation  go to state 45
    Assignment        go to state 46
    ParseArgs         go to state 47


State 45

   35 Statement: MethodInvocation • SEMICOLON

    SEMICOLON  shift, and go to state 83


State 46

   36 Statement: Assignment • SEMICOLON

    SEMICOLON  shift, and go to state 84


State 47

   37 Statement: ParseArgs • SEMICOLON

    SEMICOLON  shift, and go to state 85


State 48

   17 MethodHeader: VOID ID LPAR RPAR •

    $default  reduce using rule 17 (MethodHeader)


State 49

   19 FormalParams: STRING • LSQ RSQ ID

    LSQ  shift, and go to state 86


State 50

   18 FormalParams: Type • ID CommaTypeIdRep

    ID  shift, and go to state 87


State 51

   15 MethodHeader: VOID ID LPAR FormalParams • RPAR

    RPAR  shift, and go to state 88


State 52

    9 CommaIdRep: COMMA ID • CommaIdRep

    COMMA  shift, and go to state 29

    $default  reduce using rule 10 (CommaIdRep)

    CommaIdRep  go to state 89


State 53

   16 MethodHeader: Type ID LPAR RPAR •

    $default  reduce using rule 16 (MethodHeader)


State 54

   14 MethodHeader: Type ID LPAR FormalParams • RPAR

    RPAR  shift, and go to state 90


State 55

    7 FieldDecl: PUBLIC STATIC Type ID CommaIdRep SEMICOLON •

    $default  reduce using rule 7 (FieldDecl)


State 56

   39 Statement: error SEMICOLON •

    $default  reduce using rule 39 (Statement)


State 57

   47 Assignment: ID ASSIGN • Expr

    ID        shift, and go to state 64
    INTLIT    shift, and go to state 65
    REALLIT   shift, and go to state 66
    BOOLLIT   shift, and go to state 67
    LPAR      shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    PLUS      shift, and go to state 71
    PARSEINT  shift, and go to state 38

    MethodInvocation  go to state 73
    Assignment        go to state 74
    ParseArgs         go to state 75
    Expr              go to state 91
    ExprOp            go to state 77


State 58

   42 MethodInvocation: ID LPAR • RPAR
   43                 | ID LPAR • Expr CommaExprRep RPAR
   44                 | ID LPAR • error RPAR

    error     shift, and go to state 92
    ID        shift, and go to state 64
    INTLIT    shift, and go to state 65
    REALLIT   shift, and go to state 66
    BOOLLIT   shift, and go to state 67
    LPAR      shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    PLUS      shift, and go to state 71
    RPAR      shift, and go to state 93
    PARSEINT  shift, and go to state 38

    MethodInvocation  go to state 73
    Assignment        go to state 74
    ParseArgs         go to state 75
    Expr              go to state 94
    ExprOp            go to state 77


State 59

   40 StatementRep: Statement • StatementRep

    error      shift, and go to state 32
    ID         shift, and go to state 33
    LBRACE     shift, and go to state 34
    SEMICOLON  shift, and go to state 35
    IF         shift, and go to state 36
    PRINT      shift, and go to state 37
    PARSEINT   shift, and go to state 38
    RETURN     shift, and go to state 39
    WHILE      shift, and go to state 40

    RBRACE  reduce using rule 41 (StatementRep)

    Statement         go to state 59
    StatementRep      go to state 95
    MethodInvocation  go to state 45
    Assignment        go to state 46
    ParseArgs         go to state 47


State 60

   27 Statement: LBRACE StatementRep • RBRACE

    RBRACE  shift, and go to state 96


State 61

   28 Statement: IF LPAR • Expr RPAR Statement ELSE Statement
   29          | IF LPAR • Expr RPAR Statement

    ID        shift, and go to state 64
    INTLIT    shift, and go to state 65
    REALLIT   shift, and go to state 66
    BOOLLIT   shift, and go to state 67
    LPAR      shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    PLUS      shift, and go to state 71
    PARSEINT  shift, and go to state 38

    MethodInvocation  go to state 73
    Assignment        go to state 74
    ParseArgs         go to state 75
    Expr              go to state 97
    ExprOp            go to state 77


State 62

   33 Statement: PRINT LPAR • Expr RPAR SEMICOLON
   34          | PRINT LPAR • STRLIT RPAR SEMICOLON

    ID        shift, and go to state 64
    INTLIT    shift, and go to state 65
    REALLIT   shift, and go to state 66
    BOOLLIT   shift, and go to state 67
    STRLIT    shift, and go to state 98
    LPAR      shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    PLUS      shift, and go to state 71
    PARSEINT  shift, and go to state 38

    MethodInvocation  go to state 73
    Assignment        go to state 74
    ParseArgs         go to state 75
    Expr              go to state 99
    ExprOp            go to state 77


State 63

   48 ParseArgs: PARSEINT LPAR • ID LSQ Expr RSQ RPAR
   49          | PARSEINT LPAR • error RPAR

    error  shift, and go to state 100
    ID     shift, and go to state 101


State 64

   42 MethodInvocation: ID • LPAR RPAR
   43                 | ID • LPAR Expr CommaExprRep RPAR
   44                 | ID • LPAR error RPAR
   47 Assignment: ID • ASSIGN Expr
   55 ExprOp: ID •
   56       | ID • DOTLENGTH

    ASSIGN     shift, and go to state 57
    LPAR       shift, and go to state 58
    DOTLENGTH  shift, and go to state 102

    $default  reduce using rule 55 (ExprOp)


State 65

   57 ExprOp: INTLIT •

    $default  reduce using rule 57 (ExprOp)


State 66

   58 ExprOp: REALLIT •

    $default  reduce using rule 58 (ExprOp)


State 67

   59 ExprOp: BOOLLIT •

    $default  reduce using rule 59 (ExprOp)


State 68

   52 ExprOp: LPAR • Expr RPAR
   79       | LPAR • error RPAR

    error     shift, and go to state 103
    ID        shift, and go to state 64
    INTLIT    shift, and go to state 65
    REALLIT   shift, and go to state 66
    BOOLLIT   shift, and go to state 67
    LPAR      shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    PLUS      shift, and go to state 71
    PARSEINT  shift, and go to state 38

    MethodInvocation  go to state 73
    Assignment        go to state 74
    ParseArgs         go to state 75
    Expr              go to state 104
    ExprOp            go to state 77


State 69

   60 ExprOp: MINUS • ExprOp

    ID        shift, and go to state 105
    INTLIT    shift, and go to state 65
    REALLIT   shift, and go to state 66
    BOOLLIT   shift, and go to state 67
    LPAR      shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    PLUS      shift, and go to state 71
    PARSEINT  shift, and go to state 38

    MethodInvocation  go to state 73
    ParseArgs         go to state 75
    ExprOp            go to state 106


State 70

   61 ExprOp: NOT • ExprOp

    ID        shift, and go to state 105
    INTLIT    shift, and go to state 65
    REALLIT   shift, and go to state 66
    BOOLLIT   shift, and go to state 67
    LPAR      shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    PLUS      shift, and go to state 71
    PARSEINT  shift, and go to state 38

    MethodInvocation  go to state 73
    ParseArgs         go to state 75
    ExprOp            go to state 107


State 71

   62 ExprOp: PLUS • ExprOp

    ID        shift, and go to state 105
    INTLIT    shift, and go to state 65
    REALLIT   shift, and go to state 66
    BOOLLIT   shift, and go to state 67
    LPAR      shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    PLUS      shift, and go to state 71
    PARSEINT  shift, and go to state 38

    MethodInvocation  go to state 73
    ParseArgs         go to state 75
    ExprOp            go to state 108


State 72

   32 Statement: RETURN SEMICOLON •

    $default  reduce using rule 32 (Statement)


State 73

   53 ExprOp: MethodInvocation •

    $default  reduce using rule 53 (ExprOp)


State 74

   51 Expr: Assignment •

    $default  reduce using rule 51 (Expr)


State 75

   54 ExprOp: ParseArgs •

    $default  reduce using rule 54 (ExprOp)


State 76

   31 Statement: RETURN Expr • SEMICOLON

    SEMICOLON  shift, and go to state 109


State 77

   50 Expr: ExprOp •
   63 ExprOp: ExprOp • PLUS ExprOp
   64       | ExprOp • MINUS ExprOp
   65       | ExprOp • STAR ExprOp
   66       | ExprOp • DIV ExprOp
   67       | ExprOp • MOD ExprOp
   68       | ExprOp • AND ExprOp
   69       | ExprOp • OR ExprOp
   70       | ExprOp • XOR ExprOp
   71       | ExprOp • LSHIFT ExprOp
   72       | ExprOp • RSHIFT ExprOp
   73       | ExprOp • EQ ExprOp
   74       | ExprOp • GE ExprOp
   75       | ExprOp • GT ExprOp
   76       | ExprOp • LE ExprOp
   77       | ExprOp • LT ExprOp
   78       | ExprOp • NE ExprOp

    AND     shift, and go to state 110
    STAR    shift, and go to state 111
    DIV     shift, and go to state 112
    EQ      shift, and go to state 113
    GE      shift, and go to state 114
    GT      shift, and go to state 115
    LE      shift, and go to state 116
    LT      shift, and go to state 117
    MINUS   shift, and go to state 118
    MOD     shift, and go to state 119
    NE      shift, and go to state 120
    OR      shift, and go to state 121
    PLUS    shift, and go to state 122
    LSHIFT  shift, and go to state 123
    RSHIFT  shift, and go to state 124
    XOR     shift, and go to state 125

    $default  reduce using rule 50 (Expr)


State 78

   30 Statement: WHILE LPAR • Expr RPAR Statement

    ID        shift, and go to state 64
    INTLIT    shift, and go to state 65
    REALLIT   shift, and go to state 66
    BOOLLIT   shift, and go to state 67
    LPAR      shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    PLUS      shift, and go to state 71
    PARSEINT  shift, and go to state 38

    MethodInvocation  go to state 73
    Assignment        go to state 74
    ParseArgs         go to state 75
    Expr              go to state 126
    ExprOp            go to state 77


State 79

   26 VarDecl: Type ID • CommaIdRep SEMICOLON

    COMMA  shift, and go to state 29

    $default  reduce using rule 10 (CommaIdRep)

    CommaIdRep  go to state 127


State 80

   22 MethodBody: LBRACE StatementVarRep RBRACE •

    $default  reduce using rule 22 (MethodBody)


State 81

   24 StatementVarRep: VarDecl StatementVarRep •

    $default  reduce using rule 24 (StatementVarRep)


State 82

   23 StatementVarRep: Statement StatementVarRep •

    $default  reduce using rule 23 (StatementVarRep)


State 83

   35 Statement: MethodInvocation SEMICOLON •

    $default  reduce using rule 35 (Statement)


State 84

   36 Statement: Assignment SEMICOLON •

    $default  reduce using rule 36 (Statement)


State 85

   37 Statement: ParseArgs SEMICOLON •

    $default  reduce using rule 37 (Statement)


State 86

   19 FormalParams: STRING LSQ • RSQ ID

    RSQ  shift, and go to state 128


State 87

   18 FormalParams: Type ID • CommaTypeIdRep

    COMMA  shift, and go to state 129

    $default  reduce using rule 21 (CommaTypeIdRep)

    CommaTypeIdRep  go to state 130


State 88

   15 MethodHeader: VOID ID LPAR FormalParams RPAR •

    $default  reduce using rule 15 (MethodHeader)


State 89

    9 CommaIdRep: COMMA ID CommaIdRep •

    $default  reduce using rule 9 (CommaIdRep)


State 90

   14 MethodHeader: Type ID LPAR FormalParams RPAR •

    $default  reduce using rule 14 (MethodHeader)


State 91

   47 Assignment: ID ASSIGN Expr •

    $default  reduce using rule 47 (Assignment)


State 92

   44 MethodInvocation: ID LPAR error • RPAR

    RPAR  shift, and go to state 131


State 93

   42 MethodInvocation: ID LPAR RPAR •

    $default  reduce using rule 42 (MethodInvocation)


State 94

   43 MethodInvocation: ID LPAR Expr • CommaExprRep RPAR

    COMMA  shift, and go to state 132

    $default  reduce using rule 46 (CommaExprRep)

    CommaExprRep  go to state 133


State 95

   40 StatementRep: Statement StatementRep •

    $default  reduce using rule 40 (StatementRep)


State 96

   27 Statement: LBRACE StatementRep RBRACE •

    $default  reduce using rule 27 (Statement)


State 97

   28 Statement: IF LPAR Expr • RPAR Statement ELSE Statement
   29          | IF LPAR Expr • RPAR Statement

    RPAR  shift, and go to state 134


State 98

   34 Statement: PRINT LPAR STRLIT • RPAR SEMICOLON

    RPAR  shift, and go to state 135


State 99

   33 Statement: PRINT LPAR Expr • RPAR SEMICOLON

    RPAR  shift, and go to state 136


State 100

   49 ParseArgs: PARSEINT LPAR error • RPAR

    RPAR  shift, and go to state 137


State 101

   48 ParseArgs: PARSEINT LPAR ID • LSQ Expr RSQ RPAR

    LSQ  shift, and go to state 138


State 102

   56 ExprOp: ID DOTLENGTH •

    $default  reduce using rule 56 (ExprOp)


State 103

   79 ExprOp: LPAR error • RPAR

    RPAR  shift, and go to state 139


State 104

   52 ExprOp: LPAR Expr • RPAR

    RPAR  shift, and go to state 140


State 105

   42 MethodInvocation: ID • LPAR RPAR
   43                 | ID • LPAR Expr CommaExprRep RPAR
   44                 | ID • LPAR error RPAR
   55 ExprOp: ID •
   56       | ID • DOTLENGTH

    LPAR       shift, and go to state 58
    DOTLENGTH  shift, and go to state 102

    $default  reduce using rule 55 (ExprOp)


State 106

   60 ExprOp: MINUS ExprOp •
   63       | ExprOp • PLUS ExprOp
   64       | ExprOp • MINUS ExprOp
   65       | ExprOp • STAR ExprOp
   66       | ExprOp • DIV ExprOp
   67       | ExprOp • MOD ExprOp
   68       | ExprOp • AND ExprOp
   69       | ExprOp • OR ExprOp
   70       | ExprOp • XOR ExprOp
   71       | ExprOp • LSHIFT ExprOp
   72       | ExprOp • RSHIFT ExprOp
   73       | ExprOp • EQ ExprOp
   74       | ExprOp • GE ExprOp
   75       | ExprOp • GT ExprOp
   76       | ExprOp • LE ExprOp
   77       | ExprOp • LT ExprOp
   78       | ExprOp • NE ExprOp

    STAR  shift, and go to state 111
    DIV   shift, and go to state 112
    MOD   shift, and go to state 119

    $default  reduce using rule 60 (ExprOp)


State 107

   61 ExprOp: NOT ExprOp •
   63       | ExprOp • PLUS ExprOp
   64       | ExprOp • MINUS ExprOp
   65       | ExprOp • STAR ExprOp
   66       | ExprOp • DIV ExprOp
   67       | ExprOp • MOD ExprOp
   68       | ExprOp • AND ExprOp
   69       | ExprOp • OR ExprOp
   70       | ExprOp • XOR ExprOp
   71       | ExprOp • LSHIFT ExprOp
   72       | ExprOp • RSHIFT ExprOp
   73       | ExprOp • EQ ExprOp
   74       | ExprOp • GE ExprOp
   75       | ExprOp • GT ExprOp
   76       | ExprOp • LE ExprOp
   77       | ExprOp • LT ExprOp
   78       | ExprOp • NE ExprOp

    $default  reduce using rule 61 (ExprOp)


State 108

   62 ExprOp: PLUS ExprOp •
   63       | ExprOp • PLUS ExprOp
   64       | ExprOp • MINUS ExprOp
   65       | ExprOp • STAR ExprOp
   66       | ExprOp • DIV ExprOp
   67       | ExprOp • MOD ExprOp
   68       | ExprOp • AND ExprOp
   69       | ExprOp • OR ExprOp
   70       | ExprOp • XOR ExprOp
   71       | ExprOp • LSHIFT ExprOp
   72       | ExprOp • RSHIFT ExprOp
   73       | ExprOp • EQ ExprOp
   74       | ExprOp • GE ExprOp
   75       | ExprOp • GT ExprOp
   76       | ExprOp • LE ExprOp
   77       | ExprOp • LT ExprOp
   78       | ExprOp • NE ExprOp

    STAR  shift, and go to state 111
    DIV   shift, and go to state 112
    MOD   shift, and go to state 119
